Professor Cadastro setup

--- a/src/main/resources/templates/professor/listaProfessores.html
+++ b/src/main/resources/templates/professor/listaProfessores.html
@@ -64,18 +64,8 @@
           <td>Mark</td>
           <td>Otto</td>
           <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
+          <td><a href="#">Editar</a></td>
+          <td><a href="#">Deletar</a></td>
         </tr>
         </tbody>
       </table>
