--- a/src/main/resources/templates/disciplina/cadastroDisciplina.html
+++ b/src/main/resources/templates/disciplina/cadastroDisciplina.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Lista Alunos</title>
+  <title>Cadastro Disciplina</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -42,33 +42,29 @@
       <h4>Sistema Diretor</h4>
       <ul class="nav nav-pills nav-stacked">
         <li><a href="/">Home</a></li>
-        <li><a href="/professores/listarProfessores">Professores</a></li>
+        <li class="active"><a href="#">Professores</a></li>
         <li><a href="/disciplinas/listarDisciplinas">Disciplinas</a></li>
-        <li class="active"><a href="#">Alunos</a></li>
+        <li><a href="/alunos/listarAlunos">Alunos</a></li>
       </ul><br>
     </div>
 
     <div class="col-sm-9">
-      <table class="table">
-        <thead class="thead-light">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">First</th>
-          <th scope="col">Last</th>
-          <th scope="col">Handle</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-          <td><a href="#">Editar</a></td>
-          <td><a href="#">Deletar</a></td>
-        </tr>
-        </tbody>
-      </table>
+      <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </div>
   </div>
 </div>
