--- a/src/main/resources/templates/aluno/cadastroAluno.html
+++ b/src/main/resources/templates/aluno/cadastroAluno.html
@@ -42,14 +42,33 @@
             <h4>Sistema Diretor</h4>
             <ul class="nav nav-pills nav-stacked">
                 <li><a href="/">Home</a></li>
-                <li class="active"><a href="#">Professores</a></li>
+                <li><a href="#">Professores</a></li>
                 <li><a href="/disciplinas/listarDisciplinas">Disciplinas</a></li>
                 <li><a href="/alunos/listarAlunos">Alunos</a></li>
             </ul><br>
         </div>
 
         <div class="col-sm-9">
-
+            <form th:object="${alunoDTO}" action="/alunos/save" method="POST">
+                <div class="form-group">
+                    <label for="nomeCompleto">Nome do Aluno</label>
+                    <input th:errorclass="is-invalid" type="text" class="form-control" th:field="*{nome}" id="nomeCompleto">
+                    <div class="invalid-feedback" th:errors="*{nome}"></div>
+                </div>
+                <div class="form-group">
+                    <label for="numRegistro">Numero de Registro</label>
+                    <input th:errorclass="is-invalid" type="text" class="form-control" th:field="*{registroAluno}" id="numRegistro">
+                    <div class="invalid-feedback" th:errors="*{registroAluno}"></div>
+                </div>
+                <div class="form-group">
+                    <label for="status">Status do Aluno</label><br>
+                    <select id="status" class="form-select" th:field="*{status}">
+                        <option th:each="status : ${alunoStatus}"
+                                th:value="${status}" th:text="${status.descricao}"></option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
     </div>
 </div>
