--- a/src/main/resources/templates/professor/cadastroProfessor.html
+++ b/src/main/resources/templates/professor/cadastroProfessor.html
@@ -50,22 +50,25 @@
 
         <div class="col-sm-9">
             <br>
-            <form action="/professores/save" method="post">
+            <form th:object="${professorDTO}" action="/professores/save" method="POST">
                 <div class="form-group">
                     <label for="nomeCompleto">Nome Completo</label>
-                    <input type="text" class="form-control" name="nomeCompleto" id="nomeCompleto">
+                    <input th:errorclass="is-invalid" type="text" class="form-control" th:field="*{nomeCompleto}" id="nomeCompleto">
+                    <div class="invalid-feedback" th:errors="*{nomeCompleto}"></div>
                 </div>
                 <div class="form-group">
                     <label for="numRegistro">Numero de Registro</label>
-                    <input type="text" class="form-control" name="numRegistro" id="numRegistro">
+                    <input th:errorclass="is-invalid" type="text" class="form-control" th:field="*{numRegistro}" id="numRegistro">
+                    <div class="invalid-feedback" th:errors="*{numRegistro}"></div>
                 </div>
                 <div class="form-group">
                     <label for="cpf">CPF</label>
-                    <input type="text" class="form-control" name="cpf" id="cpf">
+                    <input th:errorclass="is-invalid" type="text" class="form-control" th:field="*{cpf}" id="cpf">
+                    <div class="invalid-feedback" th:errors="*{cpf}"></div>
                 </div>
                 <div class="form-group">
                     <label for="status">Status do professor</label><br>
-                    <select id="status" class="form-select" name="status">
+                    <select id="status" class="form-select" th:field="*{status}">
                         <option th:each="status : ${professorStatus}"
                         th:value="${status}" th:text="${status.descricao}"></option>
                     </select>
