--- a/src/main/resources/templates/disciplina/cadastroDisciplina.html
+++ b/src/main/resources/templates/disciplina/cadastroDisciplina.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
+  <link href="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.min.css" rel="stylesheet"/>
+  <script>
+    $(".chosen-select").chosen({
+      no_results_text: "Oops, nothing found!"
+    })
+  </script>
   <style>
     /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
     .row.content {height: 1500px}
@@ -49,19 +56,30 @@
     </div>
 
     <div class="col-sm-9">
-      <form>
+      <form th:object="${disciplinaDTO}" action="/disciplinas/save" method="POST">
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <label for="nomeCompleto">Nome</label>
+          <input th:errorclass="is-invalid" type="text" class="form-control" th:field="*{nome}" id="nomeCompleto">
+          <div class="invalid-feedback" th:errors="*{nome}"></div>
         </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          <label for="numRegistro">Qnt. Aulas</label>
+          <input th:errorclass="is-invalid" type="number" class="form-control" th:field="*{qntAulas}" id="numRegistro">
+          <div class="invalid-feedback" th:errors="*{qntAulas}"></div>
         </div>
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        <div class="form-group">
+          <label for="status">Alunos participantes</label><br>
+          <select multiple class="chosen-select" th:field="*{listaAlunos}">
+            <option th:each="aluno : ${alunos}"
+                    th:value="${aluno}" th:text="${aluno.nome}"></option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="status">Professor Responsável</label><br>
+          <select id="status" class="form-select" th:field="*{professor}">
+            <option th:each="professor : ${professores}"
+                    th:value="${professor}" th:text="${professor.nomeCompleto}"></option>
+          </select>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
