--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -43,7 +43,7 @@
       <ul class="nav nav-pills nav-stacked">
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/professores/listarProfessores">Professores</a></li>
-        <li><a href="/disciplinas/listarDisciplinas">Disciplinas</a></li>
+        <li><a href="/cursos/listarCursos">Curso</a></li>
         <li><a href="/alunos/listarAlunos">Alunos</a></li>
       </ul><br>
     </div>
