--- a/src/main/resources/templates/aluno/cadastroAluno.html
+++ b/src/main/resources/templates/aluno/cadastroAluno.html
@@ -67,6 +67,13 @@
                                 th:value="${status}" th:text="${status.descricao}"></option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="curso">Curso</label><br>
+                    <select id="curso" class="form-select" th:field="*{curso}">
+                        <option th:each="c : ${cursos}"
+                                th:value="${c}" th:text="${c.nome}"></option>
+                    </select>
+                </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
