--- a/src/main/resources/templates/aluno/detalhesAluno.html
+++ b/src/main/resources/templates/aluno/detalhesAluno.html
@@ -41,9 +41,9 @@
         <div class="col-sm-3 sidenav">
             <h4>Sistema Diretor</h4>
             <ul class="nav nav-pills nav-stacked">
-                <li><a href="/">Home</a></li>
-                <li><a href="#">Professores</a></li>
-                <li><a href="/disciplinas/listarDisciplinas">Disciplinas</a></li>
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/professores/listarProfessores">Professores</a></li>
+                <li><a href="/cursos/listarCursos">Curso</a></li>
                 <li><a href="/alunos/listarAlunos">Alunos</a></li>
             </ul><br>
         </div>
