--- a/src/main/resources/templates/aluno/editarAluno.html
+++ b/src/main/resources/templates/aluno/editarAluno.html
@@ -41,9 +41,9 @@
         <div class="col-sm-3 sidenav">
             <h4>Sistema Diretor</h4>
             <ul class="nav nav-pills nav-stacked">
-                <li><a href="/">Home</a></li>
-                <li><a href="#">Professores</a></li>
-                <li><a href="/disciplinas/listarDisciplinas">Disciplinas</a></li>
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/professores/listarProfessores">Professores</a></li>
+                <li><a href="/cursos/listarCursos">Curso</a></li>
                 <li><a href="/alunos/listarAlunos">Alunos</a></li>
             </ul><br>
         </div>
@@ -65,6 +65,13 @@
                     <select id="status" class="form-select" th:field="*{status}">
                         <option th:each="status : ${alunoStatus}"
                                 th:value="${status}" th:text="${status.descricao}"></option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="status">Curso</label><br>
+                    <select id="curso" class="form-select" th:field="*{curso}">
+                        <option th:each="c : ${cursos}"
+                                th:value="${c}" th:text="${c.nome}"></option>
                     </select>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
