--- a/src/main/resources/templates/curso/cadastroCurso.html
+++ b/src/main/resources/templates/curso/cadastroCurso.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Cadastro Disciplina</title>
+  <title>Cadastro Curso</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -9,10 +9,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
   <link href="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   <script>
-    $(".chosen-select").chosen({
-      no_results_text: "Oops, nothing found!"
-    })
+    $(document).ready(function() {
+      $('.js-example-basic-multiple').select2();
+    });
   </script>
   <style>
     /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
@@ -48,38 +50,24 @@
     <div class="col-sm-3 sidenav">
       <h4>Sistema Diretor</h4>
       <ul class="nav nav-pills nav-stacked">
-        <li><a href="/">Home</a></li>
-        <li class="active"><a href="#">Professores</a></li>
-        <li><a href="/disciplinas/listarDisciplinas">Disciplinas</a></li>
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/professores/listarProfessores">Professores</a></li>
+        <li><a href="/cursos/listarCursos">Curso</a></li>
         <li><a href="/alunos/listarAlunos">Alunos</a></li>
       </ul><br>
     </div>
 
     <div class="col-sm-9">
-      <form th:object="${disciplinaDTO}" action="/disciplinas/save" method="POST">
+      <form th:object="${cursoDTO}" action="/cursos/save" method="POST">
         <div class="form-group">
           <label for="nomeCompleto">Nome</label>
           <input th:errorclass="is-invalid" type="text" class="form-control" th:field="*{nome}" id="nomeCompleto">
           <div class="invalid-feedback" th:errors="*{nome}"></div>
         </div>
         <div class="form-group">
-          <label for="numRegistro">Qnt. Aulas</label>
-          <input th:errorclass="is-invalid" type="number" class="form-control" th:field="*{qntAulas}" id="numRegistro">
-          <div class="invalid-feedback" th:errors="*{qntAulas}"></div>
-        </div>
-        <div class="form-group">
-          <label for="status">Alunos participantes</label><br>
-          <select multiple class="chosen-select" th:field="*{listaAlunos}">
-            <option th:each="aluno : ${alunos}"
-                    th:value="${aluno}" th:text="${aluno.nome}"></option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="status">Professor Responsável</label><br>
-          <select id="status" class="form-select" th:field="*{professor}">
-            <option th:each="professor : ${professores}"
-                    th:value="${professor}" th:text="${professor.nomeCompleto}"></option>
-          </select>
+          <label for="numRegistro">Código</label>
+          <input th:errorclass="is-invalid" type="number" class="form-control" th:field="*{codigo}" id="numRegistro">
+          <div class="invalid-feedback" th:errors="*{codigo}"></div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
