--- a/src/main/resources/templates/curso/detalhesCurso.html
+++ b/src/main/resources/templates/curso/detalhesCurso.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Detalhes Disciplina</title>
+    <title>Detalhes Curso</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -41,9 +41,9 @@
         <div class="col-sm-3 sidenav">
             <h4>Sistema Diretor</h4>
             <ul class="nav nav-pills nav-stacked">
-                <li><a href="/">Home</a></li>
-                <li class="active"><a href="#">Professores</a></li>
-                <li><a href="/disciplinas/listarDisciplinas">Disciplinas</a></li>
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/professores/listarProfessores">Professores</a></li>
+                <li><a href="/cursos/listarCursos">Curso</a></li>
                 <li><a href="/alunos/listarAlunos">Alunos</a></li>
             </ul><br>
         </div>
@@ -52,16 +52,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <b>ID:</b> <span th:text="${disciplina.id}"></span><br>
-                        <b>Nome:</b> <span th:text="${disciplina.nome}"></span><br>
-                        <b>Qtn de aulas:</b> <span th:text="${disciplina.qntAulas}"></span><br>
-                        <b>Professor Responsável:</b> <span th:text="${disciplina.professor}"></span><br>
-                        <b>Alunos:</b> <span th:each="a : ${disciplina.listaAlunos}" th:text="a.nome"></span><br>
+                        <b>ID:</b> <span th:text="${curso.id}"></span><br>
+                        <b>Nome:</b> <span th:text="${curso.nome}"></span><br>
+                        <b>Qtn de aulas:</b> <span th:text="${curso.codigo}"></span><br>
                     </div>
                 </div>
                 <div class="row">
-                    <a href="#">Editar</a>
-                    <a href="/professores/listarProfessores">Voltar</a>
+                    <a href="/cursos/listarCursos">Voltar</a>
                 </div>
             </div>
         </div>
