--- a/src/main/resources/templates/curso/editarCurso.html
+++ b/src/main/resources/templates/curso/editarCurso.html
@@ -9,12 +9,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
   <link href="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.min.css" rel="stylesheet"/>
-  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   <script>
-    $(document).ready(function() {
-      $('.js-example-basic-multiple').select2();
-    });
+    $(".chosen-select").chosen({
+      no_results_text: "Oops, nothing found!"
+    })
   </script>
   <style>
     /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
@@ -50,41 +48,24 @@
     <div class="col-sm-3 sidenav">
       <h4>Sistema Diretor</h4>
       <ul class="nav nav-pills nav-stacked">
-        <li><a href="/">Home</a></li>
-        <li class="active"><a href="#">Professores</a></li>
-        <li><a href="/disciplinas/listarDisciplinas">Disciplinas</a></li>
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/professores/listarProfessores">Professores</a></li>
+        <li><a href="/cursos/listarCursos">Curso</a></li>
         <li><a href="/alunos/listarAlunos">Alunos</a></li>
       </ul><br>
     </div>
 
     <div class="col-sm-9">
-      <form th:object="${disciplinaDTO}" action="/disciplinas/save" method="POST">
+      <form th:object="${cursoDTO}" th:action="@{/cursos/{cursoId}(cursoId = ${cursoId})}" method="POST">
         <div class="form-group">
           <label for="nomeCompleto">Nome</label>
           <input th:errorclass="is-invalid" type="text" class="form-control" th:field="*{nome}" id="nomeCompleto">
           <div class="invalid-feedback" th:errors="*{nome}"></div>
         </div>
         <div class="form-group">
-          <label for="numRegistro">Qnt. Aulas</label>
-          <input th:errorclass="is-invalid" type="number" class="form-control" th:field="*{qntAulas}" id="numRegistro">
-          <div class="invalid-feedback" th:errors="*{qntAulas}"></div>
-        </div>
-        <div class="form-group">
-          <label>Alunos participantes</label><br>
-          <select class="js-example-basic-multiple" th:field="*{listaAlunos}" multiple="multiple">
-            <option value=""></option>
-            <option th:each="aluno : ${alunos}"
-                    th:field="*{listaAlunos}"
-                    th:value="${aluno}"
-                    th:text="${aluno.nome}"></option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label>Professor Responsável</label><br>
-          <select id="status" class="form-select" th:field="*{professor}">
-            <option th:each="professor : ${professores}"
-                    th:value="${professor}" th:text="${professor.nomeCompleto}"></option>
-          </select>
+          <label for="numRegistro">Código</label>
+          <input th:errorclass="is-invalid" type="number" class="form-control" th:field="*{codigo}" id="numRegistro">
+          <div class="invalid-feedback" th:errors="*{codigo}"></div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
