--- a/src/main/resources/templates/professor/cadastroProfessor.html
+++ b/src/main/resources/templates/professor/cadastroProfessor.html
@@ -41,9 +41,9 @@
         <div class="col-sm-3 sidenav">
             <h4>Sistema Diretor</h4>
             <ul class="nav nav-pills nav-stacked">
-                <li><a href="/">Home</a></li>
-                <li class="active"><a href="#">Professores</a></li>
-                <li><a href="/disciplinas/listarDisciplinas">Disciplinas</a></li>
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/professores/listarProfessores">Professores</a></li>
+                <li><a href="/cursos/listarCursos">Curso</a></li>
                 <li><a href="/alunos/listarAlunos">Alunos</a></li>
             </ul><br>
         </div>
@@ -73,11 +73,14 @@
                         th:value="${status}" th:text="${status.descricao}"></option>
                     </select>
                 </div>
-<!--                <div class="form-group">-->
-<!--                    <select class="form-select">-->
-<!--                        <option></option>-->
-<!--                    </select>-->
-<!--                </div>-->
+                <div class="form-group">
+                    <label for="curso">Curso</label><br>
+                    <select id="curso" class="form-select" th:field="*{curso}">
+                        <option th:each="c : ${cursos}"
+                                th:value="${c.id}" th:text="${c.nome}"></option>
+                    </select>
+                </div>
+
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
