--- a/src/main/resources/templates/professor/listaProfessores.html
+++ b/src/main/resources/templates/professor/listaProfessores.html
@@ -41,9 +41,9 @@
     <div class="col-sm-3 sidenav">
       <h4>Sistema Diretor</h4>
       <ul class="nav nav-pills nav-stacked">
-        <li><a href="/">Home</a></li>
-        <li class="active"><a href="#">Professores</a></li>
-        <li><a href="/disciplinas/listarDisciplinas">Disciplinas</a></li>
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/professores/listarProfessores">Professores</a></li>
+        <li><a href="/cursos/listarCursos">Curso</a></li>
         <li><a href="/alunos/listarAlunos">Alunos</a></li>
       </ul><br>
     </div>
@@ -57,6 +57,7 @@
           <th scope="col">Registro</th>
           <th scope="col">CPF</th>
           <th scope="col">Status</th>
+          <th scope="col">Curso</th>
         </tr>
         </thead>
         <tbody>
@@ -65,7 +66,8 @@
           <td th:text="${p.nomeCompleto}"></td>
           <td th:text="${p.numRegistro}"></td>
           <td th:text="${p.cpf}"></td>
-          <td th:text="${p.status}"></td>
+          <td th:text="${p.status.descricao}"></td>
+          <td th:text="${p.curso.nome}"></td>
           <td><a th:href="@{/professores/show/{professorId}(professorId = ${p.id})}">Detalhar</a></td>
           <td><a th:href="@{/professores/{professorId}/edit(professorId = ${p.id})}">Editar</a></td>
           <td><a th:href="@{/professores/{professorId}/delete(professorId = ${p.id})}">Deletar</a></td>
