--- a/src/main/resources/templates/aluno/cadastroAluno.html
+++ b/src/main/resources/templates/aluno/cadastroAluno.html
@@ -42,9 +42,9 @@
             <h4>Sistema Diretor</h4>
             <ul class="nav nav-pills nav-stacked">
                 <li><a href="/">Home</a></li>
-                <li><a href="#">Professores</a></li>
-                <li><a href="/disciplinas/listarDisciplinas">Disciplinas</a></li>
-                <li><a href="/alunos/listarAlunos">Alunos</a></li>
+                <li><a href="/professores/principalProfessor">Professores</a></li>
+                <li><a href="/cursos/principalCurso">Curso</a></li>
+                <li><a href="/alunos/principalAluno">Alunos</a></li>
             </ul><br>
         </div>
 
