--- a/src/main/resources/templates/aluno/principalAluno.html
+++ b/src/main/resources/templates/aluno/principalAluno.html
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
     /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-    .row.content {height: 1500px}
+    .row.content {height: 1700px}
 
     /* Set gray background color and 100% height */
     .sidenav {
@@ -49,7 +49,12 @@
     </div>
 
     <div class="col-sm-9">
-
+      <div style="padding-top: 1cm; margin-left: 7%; margin-right: 7%; padding-bottom: 1cm;">
+        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 170px;" type="button" class="btn btn-primary">Listar todos Alunos</button>
+        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 170px;" type="button" class="btn btn-primary">Cadastrar novo Aluno</button>
+        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 170px;" type="button" class="btn btn-primary">Detalhar Aluno</button>
+        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 170px;" type="button" class="btn btn-primary">Editar Aluno</button>
+      </div>
     </div>
   </div>
 </div>
