--- a/src/main/resources/templates/professor/principalProfessor.html
+++ b/src/main/resources/templates/professor/principalProfessor.html
@@ -50,10 +50,11 @@
 
     <div class="col-sm-9">
       <div style="padding-top: 1cm; margin-left: 4%; margin-right: 4%; padding-bottom: 1cm;">
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Listar todos Professores</button>
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Cadastrar novo Professor</button>
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Detalhar Professor</button>
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Editar Professor</button>
+        <a href="/professores/listarProfessores"><button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary"  >Listar todos Professores</button></a>
+        <a href="/professores/novoProfessor"><button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary"  >Cadastrar novo Professor</button></a> 
+        <a href="/professores/listarProfessores"><button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary"  >Detalhar Professor</button></a>
+        <a href="/professores/listarProfessores"><button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary"  >Editar Professor</button></a>
+       
       </div>
     </div>
   </div>
