--- a/src/main/resources/templates/curso/principalCurso.html
+++ b/src/main/resources/templates/curso/principalCurso.html
@@ -50,10 +50,10 @@
 
     <div class="col-sm-9">
       <div style="padding-top: 1cm; margin-left: 4%; margin-right: 4%; padding-bottom: 1cm;">
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Listar todos Cursos</button>
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Cadastrar novo Curso</button>
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Detalhar Curso</button>
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Editar Curso</button>
+        <a href="/cursos/listarCursos"><button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary"  >Listar todos Cursos</button></a>
+        <a href="/cursos/new"><button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary"  >Cadastrar novo Curso</button></a> 
+        <a href="/cursos/listarProfessores"><button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary"  >Detalhar Curso</button></a>
+        <a href="/cursos/listarProfessores"><button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary"  >Editar Curso</button></a>
       </div>
     </div>
   </div>
