Inserção dos Botões

--- a/src/main/resources/templates/aluno/cadastroAluno.html
+++ b/src/main/resources/templates/aluno/cadastroAluno.html
@@ -44,7 +44,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/professores/principalProfessor">Professores</a></li>
                 <li><a href="/cursos/principalCurso">Curso</a></li>
-                <li><a href="/alunos/principalAluno">Alunos</a></li>
+                <li class="active"><a href="/alunos/principalAluno">Alunos</a></li>
             </ul><br>
         </div>
 
