--- a/src/main/resources/templates/aluno/editarAluno.html
+++ b/src/main/resources/templates/aluno/editarAluno.html
@@ -41,10 +41,10 @@
         <div class="col-sm-3 sidenav">
             <h4>Sistema Diretor</h4>
             <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/professores/principalProfessor">Professores</a></li>
                 <li><a href="/cursos/principalCurso">Curso</a></li>
-                <li><a href="/alunos/principalAluno">Alunos</a></li>
+                <li class="active"><a href="/alunos/principalAluno">Alunos</a></li>
             </ul><br>
         </div>
 
