--- a/src/main/resources/templates/aluno/principalAluno.html
+++ b/src/main/resources/templates/aluno/principalAluno.html
@@ -24,6 +24,14 @@
       padding: 15px;
     }
 
+    #conteudo{
+      padding-top: 1cm; 
+      position:relative;
+      padding-bottom: 1cm;
+      margin-left: 25%;
+      margin-right: 25%; 
+    }
+    
     /* On small screens, set height to 'auto' for sidenav and grid */
     @media screen and (max-width: 767px) {
       .sidenav {
@@ -41,19 +49,17 @@
     <div class="col-sm-3 sidenav">
       <h4>Sistema Diretor</h4>
       <ul class="nav nav-pills nav-stacked">
-        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/professores/principalProfessor">Professores</a></li>
         <li><a href="/cursos/principalCurso">Curso</a></li>
-        <li><a href="/alunos/principalAluno">Alunos</a></li>
+        <li class="active"><a href="/alunos/principalAluno">Alunos</a></li>
       </ul><br>
     </div>
 
     <div class="col-sm-9">
-      <div style="padding-top: 1cm; margin-left: 4%; margin-right: 4%; padding-bottom: 1cm;">
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Listar todos Alunos</button>
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Cadastrar novo Aluno</button>
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Detalhar Aluno</button>
-        <button style="margin-top: 10px; margin-bottom: 10px; margin-left: 1.5%; margin-right: 1.5%; width: 180px;" type="button" class="btn btn-primary">Editar Aluno</button>
+      <div id="conteudo">
+        <a href="/alunos/listarAlunos"><button style="width: 180px;" type="button" class="btn btn-primary"  >Listar todos Alunos</button></a>
+        <a href="/alunos/new"><button style="width: 180px;" type="button" class="btn btn-primary"  >Cadastrar novo Aluno</button></a>
       </div>
     </div>
   </div>
