--- a/src/main/resources/templates/curso/cadastroCurso.html
+++ b/src/main/resources/templates/curso/cadastroCurso.html
@@ -57,7 +57,7 @@
       </ul><br>
     </div>
 
-    <div class="col-sm-9">
+    <div class="col-sm-9" style="margin-top: 20px; margin-bottom: 20px;">
       <form th:object="${cursoDTO}" action="/cursos/save" method="POST">
         <div class="form-group">
           <label for="nomeCompleto">Nome</label>
