--- a/src/main/resources/templates/aluno/listaAlunos.html
+++ b/src/main/resources/templates/aluno/listaAlunos.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <style>
     /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
     .row.content {height: 1500px}
@@ -48,7 +49,7 @@
       </ul><br>
     </div>
 
-    <div class="col-sm-9">
+    <div class="col-sm-9" style="margin-top: 20px; margin-bottom: 20px;">
       <table class="table">
         <thead class="thead-light">
         <tr>
@@ -66,9 +67,10 @@
           <td th:text="*{a.registroAluno}"></td>
           <td th:text="*{a.status.descricao}"></td>
           <td th:text="*{a.curso.nome}"></td>
-          <td><a th:href="@{/alunos/show/{alunoId}(alunoId = ${a.id})}">Detalhar</a></td>
-          <td><a th:href="@{/alunos/{alunoId}/edit(alunoId = ${a.id})}">Editar</a></td>
-          <td><a th:href="@{/alunos/{alunoId}/delete(alunoId = ${a.id})}">Deletar</a></td>
+          <td style="text-align:right">
+              <a class="btn btn-info btn-md"    role="button" th:href="@{/alunos/show/{alunoId}(alunoId = ${a.id})}"><span class="iconify" data-icon="mdi:account-details" style="color: white; font-size: 17px; vertical-align:text-bottom;" ></span> Detalhar</a>
+              <a class="btn btn-primary btn-md" role="button" th:href="@{/alunos/{alunoId}/edit(alunoId = ${a.id})}"><span class="iconify" data-icon="charm:pencil" style="font-size: 17px; vertical-align:text-bottom;" ></span> Editar</a>
+              <a class="btn btn-danger btn-md"  role="button" th:href="@{/alunos/{alunoId}/delete(alunoId = ${a.id})}"><span class="iconify" data-icon="clarity:remove-solid" style="color: white; font-size: 17px; vertical-align:text-bottom;" ></span> Deletar</a></td>
         </tr>
         </tbody>
       </table>
