--- a/src/main/resources/templates/curso/listaCursos.html
+++ b/src/main/resources/templates/curso/listaCursos.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <style>
-        /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-        .row.content {height: 1500px}
+        /* Set height of the grid so .sidenav can be 150% (adjust if needed) */
+        .row.content {height: 1150px}
 
-        /* Set gray background color and 100% height */
+        /* Set gray background color and 150% height */
         .sidenav {
             background-color: #f1f1f1;
-            height: 100%;
+            height: 150%;
         }
 
         /* Set black background color, white text and some padding */
@@ -48,7 +49,7 @@
             </ul><br>
         </div>
 
-        <div class="col-sm-9">
+        <div class="col-sm-9" style="margin-top: 20px; margin-bottom: 20px;">
             <table class="table">
                 <thead class="thead-light">
                 <tr>
@@ -62,9 +63,13 @@
                     <td th:text="*{c.id}"></td>
                     <td th:text="*{c.nome}"></td>
                     <td th:text="*{c.codigo}"></td>
-                    <td><a th:href="@{/cursos/show/{cursoId}(cursoId = ${c.id})}">Detalhar</a></td>
-                    <td><a th:href="@{/cursos/{cursoId}/edit(cursoId = ${c.id})}">Editar</a></td>
-                    <td><a th:href="@{/cursos/{cursoId}/delete(cursoId = ${c.id})}">Deletar</a></td>
+                    <td style="text-align:right">
+                    
+                        <a class="btn btn-info btn-md"    role="button" th:href="@{/cursos/show/{cursoId}(cursoId = ${c.id})}"   ><span class="iconify" data-icon="mdi:account-details" style="color: white; font-size: 17px; vertical-align:text-bottom;" ></span> Detalhar</a>
+                        <a class="btn btn-primary btn-md" role="button" th:href="@{/cursos/{cursoId}/edit(cursoId = ${c.id})}"   ><span class="iconify" data-icon="charm:pencil" style="font-size: 17px; vertical-align:text-bottom;" ></span> Editar</a>
+                        <a class="btn btn-danger btn-md"  role="button" th:href="@{/cursos/{cursoId}/delete(cursoId = ${c.id})}" ><span class="iconify" data-icon="clarity:remove-solid" style="color: white; font-size: 17px; vertical-align:text-bottom;" ></span> Deletar</a>
+                    
+                    </td>
 
                 </tr>
                 </tbody>
